[gd_scene load_steps=4 format=3 uid="uid://dufoppmg5vvjq"]

[ext_resource type="FontFile" uid="uid://csuju232u5qsn" path="res://art/PixelatedEleganceRegular-ovyAA.ttf" id="1_8a0l3"]
[ext_resource type="Script" uid="uid://1oi6fjwt32em" path="res://gui/intro.gd" id="1_wn2ik"]
[ext_resource type="AudioStream" uid="uid://bvsp7vmtgx5tf" path="res://art/little-slimex27s-adventure-151007.mp3" id="3_t0tvf"]

[node name="Intro" type="CanvasLayer"]
script = ExtResource("1_wn2ik")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="IntroTextOne" type="RichTextLabel" parent="."]
offset_right = 1148.0
offset_bottom = 220.0
theme_override_fonts/normal_font = ExtResource("1_8a0l3")
theme_override_font_sizes/normal_font_size = 60
text = "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="IntroTextTwo" type="RichTextLabel" parent="."]
offset_top = 300.0
offset_right = 1148.0
offset_bottom = 520.0
theme_override_fonts/normal_font = ExtResource("1_8a0l3")
theme_override_font_sizes/normal_font_size = 60
text = "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="SkipButton" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -95.0
offset_top = -36.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_8a0l3")
theme_override_font_sizes/font_size = 30
text = "Skip"

[node name="StartButton" type="Button" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -134.5
offset_top = -18.0
offset_right = 134.5
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_8a0l3")
theme_override_font_sizes/font_size = 50
text = "Let's Do This"

[node name="DialogueTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="NextPageTimer" type="Timer" parent="."]
wait_time = 4.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_t0tvf")
autoplay = true

[connection signal="pressed" from="SkipButton" to="." method="_on_skip_button_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
